--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "concurrently": "^8.2.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "joi": "^17.10.2",
+    "joi": "^17.11.0",
+    "joi-password": "^4.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "serve": "^14.2.1",
