--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.11.0",
+    "joi-objectid": "^4.0.2",
     "joi-password": "^4.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
